pandas (0.18.1+git25-ga7469cf-1) unstable; urgency=medium

  * New upstream snapshot from v0.19.0rc1-25-ga7469cf
  * debian/patches
    - dropped changeset_ and up_ patches adopted upstream, refreshed the rest

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 20 Sep 2016 13:13:17 -0400

pandas (0.18.1-1) unstable; urgency=medium

  * Fresh upstream release
  * debian/patches/
    - changeset_46af7cf0f8e0477f6cc7454aa786a573228f0ac3.diff
      to allow also AttributeError exception being thrown in the tests
      (Closes: #827938)
    - debian/patches/deb_skip_test_precision_i386
      removed (upstreamed)

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 13 Jul 2016 10:42:00 -0400

pandas (0.18.0+git114-g6c692ae-1) unstable; urgency=medium

  * debian/control
    - added python{,3}-pkg-resources to direct Depends for the packages
      (Closes: #821076)

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 17 Apr 2016 20:49:25 -0400

pandas (0.17.1-3) unstable; urgency=medium

  * debian/tests/unittest*
    - set LC_ALL=C.UTF-8 for the tests run to prevent failure of test_set_locale

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 08 Dec 2015 08:31:30 -0500

pandas (0.17.1-2) unstable; urgency=medium

  * debian/control
    - make -statsmodels and -tables optional build-depends on those platforms
      where they are N/A atm.  Added bdepends on python3-tables since available

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 06 Dec 2015 12:58:26 -0500

pandas (0.17.1-1) unstable; urgency=medium

  * Fresh upstream bugfix release
  * debian/rules
    - fixed deletion of moved away .so files

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 27 Nov 2015 10:52:49 -0500

pandas (0.17.0+git8-gcac4ad2-2) unstable; urgency=medium

  * Bug fix: install also msgpack/*.so extensions to -lib packages

 -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 10 Oct 2015 13:52:54 -0400

pandas (0.17.0+git8-gcac4ad2-1) unstable; urgency=medium
