@@ -3,8 +3,11 @@ pandas (0.18.1+git25-ga7469cf-1) unstable; urgency=medium
   * New upstream snapshot from v0.19.0rc1-25-ga7469cf
   * debian/patches
     - dropped changeset_ and up_ patches adopted upstream, refreshed the rest
+  * debian/rules,patches
+    - save debian-based version into __version.py, so doesn't conflict with
+      upstream tests of public API
 
- -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 20 Sep 2016 13:13:17 -0400
+ -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 20 Sep 2016 22:31:17 -0400
 
 pandas (0.18.1-1) unstable; urgency=medium
 
